--- a/books/HistoryClimate/index.html
+++ b/books/HistoryClimate/index.html
@@ -128,6 +128,39 @@
     </div>
   </div>
 
+  <script>
+    // Dynamically adjust the "Читать онлайн" link based on device type. On mobile devices,
+    // readers will be directed to a scroll-friendly viewer; on desktop, the link
+    // remains on the standard HTML page. The device check uses several heuristics
+    // including UA client hints, the user-agent string, touch support and screen size.
+    document.addEventListener('DOMContentLoaded', function() {
+      const readLink = document.getElementById('onlineReadLink');
+      if (!readLink) return;
+      // Helper function to detect mobile devices reliably
+      function isMobileDevice() {
+        // Check the NavigatorUAData API if present
+        if (navigator.userAgentData && typeof navigator.userAgentData.mobile === 'boolean') {
+          return navigator.userAgentData.mobile;
+        }
+        const ua = (navigator.userAgent || navigator.vendor || window.opera || '').toLowerCase();
+        // Keywords that typically indicate a mobile device
+        if (/(android|iphone|ipad|ipod|blackberry|phone|mobile|iemobile|opera mini)/i.test(ua)) {
+          return true;
+        }
+        // Use touch capability combined with a smaller viewport as a fallback heuristic
+        const hasTouch = ('ontouchstart' in window) || (navigator.maxTouchPoints > 0);
+        const viewportMin = Math.min(window.innerWidth || document.documentElement.clientWidth, window.innerHeight || document.documentElement.clientHeight);
+        if (hasTouch && viewportMin < 800) {
+          return true;
+        }
+        return false;
+      }
+      const mobile = isMobileDevice();
+      // Choose appropriate page for reading based on device
+      readLink.href = mobile ? 'books/HistoryClimate/reader_browser_scrolling.html' : 'books/HistoryClimate/read.html';
+    });
+  </script>
+
   <!-- BOOK -->
   <div class="book-section">
     <div class="book-title">От каменного века до железного</div>
@@ -138,6 +171,7 @@
         </a>
       </div>
       <div class="links-vertical">
+        <!-- The online reading link will be rewritten at runtime based on device type -->
         <a id="onlineReadLink" href="books/HistoryClimate/read.html">📖 Читать онлайн</a>
         <a href="books/HistoryClimate/History_Climate.pdf" download>⬇️ Скачать книгу (PDF)</a>
         <a href="books/HistoryClimate/read.html#comments">💬 Оставить комментарий</a>
@@ -145,22 +179,6 @@
       </div>
     </div>
   </div>
-
-  <script>
-    // Dynamically adjust the "Читать онлайн" link based on device type.
-    // On mobile devices, readers are directed to the scrolling viewer; on
-    // desktop, they remain on the standard HTML view. Detection relies on
-    // the user agent and simple heuristics.
-    (function() {
-      const readLink = document.getElementById('onlineReadLink');
-      if (!readLink) return;
-      // Basic mobile detection via userAgent and presence of touch capabilities.
-      const ua = navigator.userAgent || navigator.vendor || window.opera;
-      const isMobile = /Mobi|Android|iPhone|iPad|iPod|BlackBerry|Windows Phone/i.test(ua) || ('ontouchstart' in window && screen.width < 1025);
-      // Update the href based on device type
-      readLink.href = isMobile ? 'books/HistoryClimate/reader_browser_scrolling.html' : 'books/HistoryClimate/read.html';
-    })();
-  </script>
 
 </body>
 </html>
