added comments' page link to index.html

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     }
                     window.location.href = isMobile ? 'books/HistoryClimate/reader_browser_scrolling.html' : 'books/HistoryClimate/read.html'; return false;">📖 Читать онлайн</a>
         <a href="books/HistoryClimate/History_Climate.pdf" download>⬇️ Скачать книгу (PDF)</a>
-        <a href="books/HistoryClimate/read.html#comments">💬 Оставить комментарий</a>
+        <a href="books/HistoryClimateHistory_Climate_Comments.HTML">💬 Оставить комментарий</a>
         <a href="books/HistoryClimate/Readme.html">ℹ️ Описание книги</a>
       </div>
     </div>
