fixed formspree id

--- a/books/HistoryClimate/History_Climate_Comments.HTML
+++ b/books/HistoryClimate/History_Climate_Comments.HTML
@@ -53,7 +53,7 @@
         Отправьте комментарий. Мы просматриваем все сообщения и публикуем одобренные.
       </p>
 
-      <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+      <form action="https://formspree.io/f/manbrpkr" method="POST">
         <!-- фиксированный отправитель/тема для лучшей доставляемости -->
         <input type="hidden" name="_replyto" value="kalimanbooks@gmail.com">
         <input type="hidden" name="_subject" value="Новый комментарий к книге">
