--- a/books/HistoryClimate/History_Climate_Comments.HTML
+++ b/books/HistoryClimate/History_Climate_Comments.HTML
@@ -26,14 +26,41 @@
     .row { display:flex; gap:14px; flex-wrap:wrap; }
     .row > * { flex:1 1 240px; }
 
-    button { display:inline-block; border:1px solid #111; border-radius:999px; padding:12px 18px; background:#111; color:#fff; cursor:pointer; }
-    button:hover { filter:brightness(1.06); }
+    button, .btn {
+      display:inline-block; border:1px solid #111; border-radius:999px;
+      padding:12px 18px; background:#111; color:#fff; cursor:pointer; text-decoration:none;
+    }
+    button:hover, .btn:hover { filter:brightness(1.06); }
 
     .hint { background:#fafafa; border:1px dashed #ccc; border-radius:10px; padding:12px; margin-top:12px; }
     .sr-only { position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0; }
 
     .rules-list { margin:.3rem 0 0; padding-left:1.1rem; }
     .rules-list li { margin:.35rem 0; }
+
+    /* Fade animation */
+    #commentForm {
+      transition: opacity 0.6s ease, height 0.6s ease;
+    }
+    #commentForm.hidden {
+      opacity:0;
+      pointer-events:none;
+      height:0;
+      overflow:hidden;
+    }
+    .success {
+      display:none;
+      opacity:0;
+      margin-top:14px; padding:14px;
+      background:#ebffe9; border:1px solid #96d190; border-radius:12px;
+      transition: opacity 0.6s ease;
+    }
+    .success.show {
+      display:block;
+      opacity:1;
+    }
+    .success h3 { margin:0 0 8px; font-size: calc(var(--font-base)*1.05); }
+    .success .actions { margin-top:10px; display:flex; gap:10px; flex-wrap:wrap; }
 
     @media (max-width:920px){
       .layout { grid-template-columns:1fr; }
@@ -47,19 +74,18 @@
   <h1>Комментарии к книге «От каменного века до века железа»</h1>
 
   <div class="layout">
-    <!-- Левая колонка: форма -->
+    <!-- Левая колонка: форма + локальный "спасибо" -->
     <div class="card">
       <p class="muted" style="margin-top:0">
         Отправьте комментарий. Мы просматриваем все сообщения и публикуем одобренные.
       </p>
 
-      <form action="https://formspree.io/f/manbrpkr" method="POST">
-        <!-- фиксированный отправитель/тема для лучшей доставляемости -->
+      <form id="commentForm" action="https://formspree.io/f/manbrpkr" method="POST">
+        <!-- фиксированный отправитель/тема -->
         <input type="hidden" name="_replyto" value="kalimanbooks@gmail.com">
         <input type="hidden" name="_subject" value="Новый комментарий к книге">
-        <!-- контекст и редирект -->
+        <!-- контекст -->
         <input type="hidden" name="file" value="От каменного века до века железа">
-        <input type="hidden" name="_redirect" value="/kaliman-books/spasibo.html">
 
         <!-- 1-я строка: От кого + Номер страницы -->
         <div class="row">
@@ -83,7 +109,7 @@
         <textarea id="message" name="message" required maxlength="5000"
           placeholder="Коротко и по делу (до 5000 символов)"></textarea>
 
-        <!-- honeypot: чтобы менеджеры паролей его не трогали -->
+        <!-- honeypot -->
         <label class="sr-only" for="_gotcha">Оставьте это поле пустым</label>
         <input id="_gotcha" type="text" name="_gotcha" style="display:none" autocomplete="off" tabindex="-1" aria-hidden="true">
 
@@ -95,6 +121,16 @@
           <button type="submit">Отправить комментарий</button>
         </p>
       </form>
+
+      <!-- Локальный "Спасибо!" -->
+      <div id="successBox" class="success" role="status" aria-live="polite">
+        <h3>Спасибо! Ваш комментарий отправлен.</h3>
+        <p class="muted" style="margin:0">Мы получили сообщение. После проверки можем опубликовать его на сайте.</p>
+        <div class="actions">
+          <a class="btn" href="/kaliman-books/">На главную</a>
+          <button class="btn" id="anotherBtn" type="button">Оставить ещё один комментарий</button>
+        </div>
+      </div>
     </div>
 
     <!-- Правая колонка: правила -->
@@ -111,5 +147,38 @@
     </div>
   </div>
 
+  <script>
+    const form = document.getElementById('commentForm');
+    const successBox = document.getElementById('successBox');
+    const anotherBtn = document.getElementById('anotherBtn');
+
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const data = new FormData(form);
+      try {
+        const res = await fetch(form.action, {
+          method: 'POST',
+          body: data,
+          headers: { 'Accept': 'application/json' }
+        });
+        if (res.ok) {
+          form.reset();
+          form.classList.add('hidden');           // fade out form
+          successBox.classList.add('show');       // fade in success
+          successBox.scrollIntoView({ behavior: 'smooth', block: 'start' });
+        } else {
+          alert('Ошибка при отправке. Попробуйте ещё раз.');
+        }
+      } catch (err) {
+        alert('Сеть недоступна. Попробуйте позже.');
+      }
+    });
+
+    anotherBtn.addEventListener('click', () => {
+      successBox.classList.remove('show');       // hide success
+      form.classList.remove('hidden');           // show form again
+      document.getElementById('from').focus();
+    });
+  </script>
 </body>
 </html>
