--- a/books/HistoryClimate/History_Climate_Comments.HTML
+++ b/books/HistoryClimate/History_Climate_Comments.HTML
@@ -80,14 +80,12 @@
         Отправьте комментарий. Мы просматриваем все сообщения и публикуем одобренные.
       </p>
 
-      <form id="commentForm" action="https://formspree.io/f/manbrpkr" method="POST">
-        <!-- фиксированный отправитель/тема -->
+      <!-- ✅ fixed endpoint -->
+      <form id="commentForm" action="https://formspree.io/f/manbprkr" method="POST">
         <input type="hidden" name="_replyto" value="kalimanbooks@gmail.com">
         <input type="hidden" name="_subject" value="Новый комментарий к книге">
-        <!-- контекст -->
         <input type="hidden" name="file" value="От каменного века до века железа">
 
-        <!-- 1-я строка: От кого + Номер страницы -->
         <div class="row">
           <div>
             <label for="from">От кого (необязательно)</label>
@@ -99,7 +97,6 @@
           </div>
         </div>
 
-        <!-- 2-я строка: широкая «Тема» с #private -->
         <div>
           <label for="subject">Тема (необязательно, для приватного сообщения добавьте <code>#private</code>)</label>
           <input id="subject" name="subject" maxlength="80" placeholder="Напр.: Вопрос по иллюстрациям">
@@ -109,7 +106,6 @@
         <textarea id="message" name="message" required maxlength="5000"
           placeholder="Коротко и по делу (до 5000 символов)"></textarea>
 
-        <!-- honeypot -->
         <label class="sr-only" for="_gotcha">Оставьте это поле пустым</label>
         <input id="_gotcha" type="text" name="_gotcha" style="display:none" autocomplete="off" tabindex="-1" aria-hidden="true">
 
@@ -122,7 +118,6 @@
         </p>
       </form>
 
-      <!-- Локальный "Спасибо!" -->
       <div id="successBox" class="success" role="status" aria-live="polite">
         <h3>Спасибо! Ваш комментарий отправлен.</h3>
         <p class="muted" style="margin:0">Мы получили сообщение. После проверки можем опубликовать его на сайте.</p>
@@ -133,7 +128,6 @@
       </div>
     </div>
 
-    <!-- Правая колонка: правила -->
     <div class="card">
       <h2 style="margin:.2rem 0 .6rem;font-size:calc(var(--font-base)*1.05);color:#222;text-align:center">Правила</h2>
       <ul class="rules-list muted">
@@ -163,11 +157,18 @@
         });
         if (res.ok) {
           form.reset();
-          form.classList.add('hidden');           // fade out form
-          successBox.classList.add('show');       // fade in success
+          form.classList.add('hidden');
+          successBox.classList.add('show');
           successBox.scrollIntoView({ behavior: 'smooth', block: 'start' });
         } else {
-          alert('Ошибка при отправке. Попробуйте ещё раз.');
+          let msg = `Ошибка ${res.status}`;
+          try {
+            const j = await res.json();
+            if (j && j.errors && j.errors[0] && j.errors[0].message) {
+              msg += `: ${j.errors[0].message}`;
+            }
+          } catch (_) {}
+          alert(msg);
         }
       } catch (err) {
         alert('Сеть недоступна. Попробуйте позже.');
@@ -175,8 +176,8 @@
     });
 
     anotherBtn.addEventListener('click', () => {
-      successBox.classList.remove('show');       // hide success
-      form.classList.remove('hidden');           // show form again
+      successBox.classList.remove('show');
+      form.classList.remove('hidden');
       document.getElementById('from').focus();
     });
   </script>
