--- a/books/HistoryClimate/History_Climate_Comments.HTML
+++ b/books/HistoryClimate/History_Climate_Comments.HTML
@@ -70,8 +70,8 @@
         </div>
 
         <div>
-          <label for="subject">Тема (необязательно, для приватного сообщения добавьте <code>#private</code>)</label>
-          <input id="subject" name="subject" maxlength="80" placeholder="Напр.: Вопрос по иллюстрациям">
+          <label for="topic">Тема (необязательно, для приватного сообщения добавьте #private)</label>
+          <input id="topic" name="topic" maxlength="80" placeholder="Напр.: Вопрос по иллюстрациям">
         </div>
 
         <label for="message">Ваш комментарий</label>
@@ -123,7 +123,6 @@
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
 
-      // Prevent double-submit (Formspree recommendation)
       submitBtn.disabled = true;
       submitBtn.setAttribute('aria-busy', 'true');
 
@@ -132,7 +131,7 @@
         const res = await fetch(form.action, {
           method: form.method,
           body: data,
-          headers: { 'Accept': 'application/json' } // required by Formspree AJAX guide
+          headers: { 'Accept': 'application/json' }
         });
 
         if (res.ok) {
@@ -141,7 +140,6 @@
           successBox.classList.add('show');
           successBox.scrollIntoView({ behavior: 'smooth', block: 'start' });
         } else {
-          // Try to show helpful validation text from Formspree
           let msg = `Ошибка ${res.status}`;
           try {
             const j = await res.json();
@@ -154,7 +152,6 @@
       } catch (err) {
         alert('Сеть недоступна. Попробуйте позже.');
       } finally {
-        // Re-enable if form is still visible (i.e., on error)
         if (!successBox.classList.contains('show')) {
           submitBtn.disabled = false;
           submitBtn.removeAttribute('aria-busy');
